[package]
name = "shift_stripe"
version = "0.1.0"
edition = "2021"

[lib]
bench = true

[[bench]]
name = "benches"

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_core = "0.6.4"
log = "0.4.20"

[dev-dependencies]
paste = "1.0.14"
testu01 = { git = "https://github.com/pr0methean/rust-testu01.git", branch = "static-link" }
rusty-fork = "0.3.0"
rv = "0.16.1"